static/css/style.css
/* === Stylesheet === */

/* || Reset */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

button {
  font: inherit;
}

/* || Root Variables */

:root {
  /* Colours */
  --primary-colour: #D2C0A7; /* Warm Beige */
  --text-colour: #593D2B; /* Rich Brown */
  --hover-colour: #B87333; /* Muted Copper */
  --text-one: #F3EAD6;  /* Soft Cream */
  --text-two: #36454F; /* Deep Charcoal */

}

/* || Utility Classes */

.underline {
  text-decoration: underline;
  text-decoration-color: var(--hover-colour);
}

/* || Buttons */

.btn-primary, .btn-secondary {
  background-color: var(--hover-colour);
  border-color: var(--hover-colour);
  color: var(--text-one);
  transition: all 0.3s ease;
}

.btn-primary:hover, .btn-secondary:hover {
  background-color: var(--text-colour);
  border-color: var(--text-colour);
  color: var(--text-one);
}

.btn-primary:focus, .btn-secondary:focus {
  background-color: var(--text-colour);
  border-color: var(--text-colour);
  color: var(--text-one);
}

.btn-outline-primary {
  color: var(--hover-colour);
  border-color: var(--hover-colour);
  background-color: transparent;
}

.btn-outline-primary:hover {
  background-color: var(--hover-colour);
  color: var(--text-one);
}

.btn {
  border-radius: 0;
  padding: 0.375rem 1rem;
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}
 
/* Make buttons smaller */
.btn-sm {
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  line-height: 1.5;
}

/* || General styles */

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--primary-colour);
  font-family: "Josefin Sans", sans-serif;
  display: flex;
  flex-direction: column;
  font-optical-sizing: auto;
  font-style: normal;
  width: 100%;
}

img {
  display: block;
  height: auto;
  max-height:500px;
  max-width:500px;
  width: auto;
}

h3, h5 {
  color: var(--text-colour);
}

/* || Typography */

/* Fonts */
.outfit-heading {
  font-family: "Outfit", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  position: relative;
}

/* Other Header Text */
.other-header-text {
  font-size: 2rem;
  font-weight: 600;
  color: var(--header-colour);
  text-decoration:underline;
  text-decoration-color: var(--hover-colour);
}

/* || Image CSS */

/* Background Image */
.bg-image {
  background-image: url(/static/images/final-hero.jpg);
  background-size: cover;
  background-position: center; 
  background-repeat: no-repeat;
  height: 100%;
  width: 100%;
}

/* || Navbar */

/* Flex Utils for correct alignment */

#recipes {
  padding-top: 1rem;
}

.navbar .container-fluid {
  padding: 0;
}

.navbar-toggler {
  margin-left: auto;
}

/* Main logo */
.main-logo {
  font-size: 3rem;
  font-weight: 700;
  color: var(--text-one);
}

.main-logo:hover {
  color: var(--text-colour);
}

/* Flashes */
.flashes h4 {
  line-height: 2;
}

/* Navbar Text */
.navbar-text {
  font-size: 1.2rem;
  font-weight: 600;
  color: var(--header-colour);
}

.navbar-text:hover {
  color: var(--text-colour);
  text-decoration: underline;
  text-decoration-thickness: 4px;
  text-decoration-color: var(--hover-colour);
}

/* Navbar Style */
.navbar {
  transition: background-color 0.3s ease, color 0.3s ease;
}

/* Navbar Brand */

.navbar-brand {
  margin-right: auto;
}

.navbar-brand, .nav-link {
  font-family: 'Outfit', sans-serif;
  color: var(--header-colour);
}

.navbar-brand, .nav-link, .navbar-toggler i {
  color: var(--text-one);
  transition: color 0.3s ease;
}

.full-title {
  display: inline;
}

.short-title {
  display: none;
}

/* || Seach Bar */
.search-form {
  border-bottom: 2px solid var(--text-colour);
  padding: 5px 0;
  margin-bottom: 1rem;
}

.search-input {
  border: none;
  background-color: transparent;
  color: var(--text-colour);
  font-size: 1rem;
  width: 100%;
  padding: 0.5rem 0;
}

.search-input:focus {
  outline: none;
}

.search-button,
.show-all-button {
    background-color: transparent;
    color: var(--text-colour);
    padding: 0.5rem 1rem;
    font-size: 1rem;
    transition: all 0.3s ease;
    font-weight: 600;
}

.search-button:hover,
.show-all-button:hover {
    color: var(--text-one);
}

.search-form-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 1rem;
}

.search-input-wrapper {
  flex-grow: 1;
  margin-right: 1rem;
}

.show-all-container {
  display: flex;
  justify-content: center;
}

/* || Recipe Cards */

/* Cards Section */

/* Cards */
.card-style {
  background-color: var(--text-one);
  color: var(--text-two);
  height: 100%;
  border-radius: 0;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.recipe-card-title {
  font-size: 2rem;
  font-weight: 600;
  color: var(--text-colour);
}

.recipe-card-title::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 4px;
  border-radius: 4px;
  background-color: #18272F;
  bottom: 0;
  left: 0;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform .3s ease-in-out;
}

.recipe-card-title:hover::before {
  transform-origin: left;
  transform: scaleX(1);
}

.card-image {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.card-img {
  display: block;
  max-width: 100%;
  height: auto;
}

.card-text {
  margin-bottom: 20px;
}

.info-bar {
  position: absolute;
  top: 10px;
  width: 100%;
  display: flex;
  justify-content: center;
  gap: 10px;
  background-color: rgba(0, 0, 0, 0.5); 
  padding: 5px;
  color: var(--text-one);
}

.info-bar .prep-time,
.info-bar .serving-size,
.info-bar .cook-time {
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
}

.info-box {
  background-color: rgba(0, 0, 0, 0.6);
  color: var(--text-one);
  padding: 5px 10px;
  border-radius: 3px;
  font-size: 0.75rem;
  font-weight: 600;
  white-space: nowrap;
  text-align: center;
}
/* ... */

